# cookiecutter-python-starter

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: Dockerfile  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: main.py
